--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -195,7 +195,7 @@
             <div class="form" fxLayout="row wrap" fxLayoutAlign="start center">
                 <h5 class="tab-sub-title" fxFlex="100">{{ 'forms.label.taken_test' | translate}} <span>*</span></h5>
                 <div class="covid-test-status" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
-                    <mat-radio-group class="radio-group" fxLayout="column" fxLayoutAlign="start start" [formControl]="formControls.covidTestStatus" required>
+                    <mat-radio-group class="radio-group" fxLayout="column" fxLayoutAlign="start start" [formControl]="formControls.covidTestStatus" (change)="resetCovidTestStatus()" required>
                         <mat-radio-button class="tab-check-box" value="ut" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.under_test' | translate }} </mat-radio-button>
                         <mat-radio-button class="tab-check-box" value="p" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.pos_test' | translate }} </mat-radio-button>
                         <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.neg_test' | translate }} </mat-radio-button>
@@ -211,9 +211,9 @@
                         fxLayoutAlign="start center"
                         fxLayoutGap="10px" fxFlex
                         fxFlex.xs="100"
-                        [formControl]="formControls.testType">
-                        <mat-radio-button class="tab-check-box" value="rtpcr" fxFlex="15" fxFlex.xs="25">{{'forms.option.rtpcr' | translate}} </mat-radio-button>
-                        <mat-radio-button class="tab-check-box" value="rat" fxFlex="15" fxFlex.xs="25">{{'forms.option.rat' | translate}} </mat-radio-button>
+                        [formControl]="formControls.testType" required>
+                        <mat-radio-button class="tab-check-box" value="rtpcr" fxFlex="15" fxFlex.xs="25">{{'RT-PCR'}} </mat-radio-button>
+                        <mat-radio-button class="tab-check-box" value="rat" fxFlex="15" fxFlex.xs="25">{{'RAT'}} </mat-radio-button>
                     </mat-radio-group>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                 <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.when_test' | translate}}<span>*</span></h5>
                 <mat-form-field class="example-full-width" appearance="fill" fxFlex="15" fxFlex.xs="27" >
                     <mat-label >{{'forms.label.test_date' | translate}} </mat-label>
-                    <input matInput [min]= "formControls.minTestDate.value" [max]="formControls.maxTestDate.value" [matDatepicker]="picker"  [(ngModel)]="formControls.testDate">
+                    <input matInput [min]= "formControls.minTestDate.value" [max]="formControls.maxTestDate.value" [matDatepicker]="picker" [formControl]="formControls.testDate" required>
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
@@ -235,7 +235,7 @@
                 <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.srf_id' | translate}}<span>*</span></h5>
             	<mat-form-field fxFlex="30" fxFlex.xs>
             	    <mat-label>{{'forms.label.enter_srf_id' | translate}}</mat-label>
-            	    <input type="text" [formControl]="formControls.srf_id" matInput>
+            	    <input type="number" [formControl]="formControls.srf_id" matInput>
                     <mat-error *ngIf="formControls.srf_id.hasError('required')">{{'forms.errors.required' | translate}}</mat-error>
             	</mat-form-field>
             </div>
@@ -258,7 +258,7 @@
                 </div>
             </div>
             <div class="form" fxLayout="row wrap" fxLayoutAlign="start center">
-             <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.current_status' | translate}} <span>*</span></h5>
+             <h5 class="tab-sub-title" *ngIf="formControls.covidTestStatus.value" fxFlex="100">{{'forms.label.current_status' | translate}} <span>*</span></h5>
                 <div class="current-status" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
                     <div *ngIf="formControls.covidTestStatus.value==='p'">
                     <mat-radio-group class="radio-group" fxLayout="column" fxLayoutAlign="start start" [formControl]="formControls.currentStatus" required>
