--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -10,12 +10,11 @@
     </div>
     <div class="score" fxLayout="row" fxLayoutAlign="start center">
         <div *ngIf="!viewScore">
-	    We don't recommend to take any actions based on this result.<br>
-	    Please follow the recommendation of ICMR for covid testing.<br>
-	    Development of this covid detection algorithm is in progress.<br><br>
-	    If you agree with above disclaimer,<br>
-	    click "I Agree" to see the prediction result.<br><br>
-            <button (click)="viewScore = true">I Agree</button>
+	    This testing tool for COVID-19 diagnosis is not yet approved by regulatory authorities.<br>
+	    The Project COSWARA team is not liable for any actions taken based on the score outputs.<br><br>
+	    A high score does not necessarily imply a COVID-19 positive result and similarly, a low score does not necessarily imply a COVID-19 negative result.<br>
+	    All state, central as well as local administration rules must be followed for COVID-19 testing.<br><br>
+            <button (click)="viewScore = true">Agree and view score</button>
         </div>
         <div *ngIf="viewScore && scoreData && !scoreData.score" class="score-loader" fxLayout="row" fxLayoutAlign="center center">
             <mat-progress-spinner [diameter]="60" mode="indeterminate"></mat-progress-spinner>
@@ -26,7 +25,10 @@
         </div>
         <div *ngIf="viewScore && scoreData.score" class="score-view" fxLayout="column" fxLayout.gt-xs="row" fxLayoutAlign="center center">
             <div class="score-value" fxLayout="row" fxLayoutAlign="center center">
-                <div class="score-value-box">{{scoreData.score.toFixed(4)*100}}%</div>
+	    <!--
+                <h5 class="main">Covid 19 probability score  :</h5>
+	    -->
+                <div class="score-value-box">Covid-19 probability score : {{scoreData.score.toFixed(2)}}</div>
             </div>
 	    <!--
             <div class="score-desc" fxFlex>
